K8S/Base/Infrastructure/Ingress/ingress-entry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-entry
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    http:
      paths:
      - path: /api/.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: gateway-svc
            port:
              number: 80
      - path: /.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
